[package]
name = "dune"
version = "0.1.0"
authors = ["Damian Andrei <andreidaamian@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
byteorder = "1.3.4"
enum-primitive-derive = "0.1.2"
flate2 = "1.0.13"
futures = "^0.3.0"
num-traits = "0.2.11"
tokio = { version = "0.2.11", features = ["tcp", "macros", "sync", "rt-core", "io-util", "dns", "blocking"] }
paste = "0.1.6"

[profile.release]
lto = true