[workspace]
members = [
  "dune",
  "dune_lib",
  "dune_common",
  "dune_data",
  "dune_data_gen"
]
default-members = ["dune"]
resolver = "2"

# -------------------------------------------------------------------------------------------------
[workspace.dependencies]
dune_lib = { path = "dune_lib" }
dune_common = { path = "dune_common"}
dune_data = { path = "dune_data" }
dune_data_gen = { path = "dune_data_gen" }

anyhow = "1"
ansi_term = "0.12.1"
bumpalo = { version = "3", features = ["collections"] }
byteorder = "1"
bytemuck = "1"
chrono = { version = "0.4.22", features = ["clock"], default-features = false }
# cfg-if = "1.0.0"
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }
humansize = "2.1.3"
num_enum = "0.7.2"
convert_case = "0.6.0"
indexmap = { version = "2", features = ["serde"] }
bitvec = "1"
num-bigint = "0.4.3"
polling = "2"
rand = "0.8.5"
slice-ring-buffer = "0.3.2"
ureq = "2"
fs-err = "3"
syn = { version = "2", features = ["parsing"] }
prettyplease = "0.2.37"
slotmap = "1"

serde = "1"
serde_json = "1"
serde_derive = "1"
toml = "0.9.8"

aes = "0.7.2"
cfb8 = "0.7.1"
cipher = "0.4.3"
rsa = "0.6.1"
sha1 = "0.10.5"

log = "0.4"
simple_logger = { version = "5", features = ["colors", "stderr"], default-features = false}

clap = { version = "4", features = ["derive"] }

winresource = { version = "0.1.17", default-features = false }
# -------------------------------------------------------------------------------------------------

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"
lto = "thin"

[profile.release-lto-fat]
inherits = "release"
lto = "fat"
