[package]
name = "dune"
version = "0.1.0"
authors = ["Damian Andrei <andreidaamian@gmail.com>"]
edition = "2021"

[dependencies]
dune_lib = { path = "../dune_lib" }
dune_common = { path = "../dune_common"}
dune_data = { path = "../dune_data" }

anyhow = "1"
ansi_term = "0.12.1"
bumpalo = { version = "3", features = ["collections"] }
chrono = { version = "0.4.22", features = ["clock"], default-features = false }
cfg-if = "1.0.0"
humansize = "2.1.3"

serde = "1"
serde_json = "1"
serde_derive = "1"
toml = "0.7.4"

log = "0.4"
simple_logger = { version = "2", features = ["colors", "stderr"], default-features = false}

clap = { version = "4", features = ["derive"] }

[build-dependencies]
winres = "0.1.12"

[target.'cfg(target_family = "unix")'.dependencies]
users = { version = "0.11", default-features = false }
