[package]
name = "dune"
version = "0.1.0"
authors = ["Damian Andrei <andreidaamian@gmail.com>"]
edition = "2021"

[dependencies]
dune_lib.workspace = true
dune_common.workspace = true
dune_data.workspace = true

anyhow.workspace = true
ansi_term.workspace = true
bumpalo.workspace = true
chrono.workspace = true
cfg-if.workspace = true
humansize.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
toml.workspace = true

log.workspace = true
simple_logger.workspace = true

clap.workspace = true

[build-dependencies]
winres.workspace = true

[target.'cfg(target_family = "unix")'.dependencies]
users = { version = "0.11", default-features = false }
