[package]
name = "dune"
version = "0.1.0"
authors = ["Damian Andrei <andreidaamian@gmail.com>"]
edition = "2024"

[dependencies]
dune_lib.workspace = true
dune_common.workspace = true
dune_data.workspace = true

anyhow.workspace = true
ansi_term.workspace = true
bumpalo.workspace = true
chrono.workspace = true
humansize.workspace = true
fs-err.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
toml.workspace = true

log.workspace = true
simple_logger.workspace = true

clap.workspace = true

[build-dependencies]
winresource.workspace = true

[target.'cfg(target_family = "unix")'.dependencies]
uzers = { version = "0.12.1", default-features = false }
