[package]
name = "dune_data_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo.workspace = true
indexmap.workspace = true
convert_case.workspace = true
humansize.workspace = true
fs-err.workspace = true
syn.workspace = true
prettyplease.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true