[package]
name = "dune_lib"
version = "0.1.0"
authors = ["Damian Andrei <andreidaamian@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
bumpalo = { version = "3", features = ["collections"] }
byteorder = "1"
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }
num_enum = "0.5.7"
polling = "2"
rand = "0.8.5"
ureq = "2"
num-bigint = "0.4.3"
log = "0.4"
bitvec = "1"
slice-ring-buffer = "0.3.2"
lazy_static = "1"

serde = "1"
serde_json = "1"
serde_derive = "1"

aes = "0.7.2"
cfb8 = "0.7.1"
cipher = "0.4.3"
rsa = "0.6.1"
sha1 = "0.10.5"
