[package]
name = "dune_lib"
version = "0.1.0"
authors = ["Damian Andrei <andreidaamian@gmail.com>"]
edition = "2024"

[dependencies]
dune_common.workspace = true
dune_data.workspace = true

anyhow.workspace = true
bumpalo.workspace = true
byteorder.workspace = true
flate2.workspace = true
num_enum.workspace = true
polling.workspace = true
rand.workspace = true
ureq.workspace = true
num-bigint.workspace = true
log.workspace = true
bitvec.workspace = true
slice-ring-buffer.workspace = true
bytemuck.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

aes.workspace = true
cfb8.workspace = true
cipher.workspace = true
rsa.workspace = true
sha1.workspace = true
