[package]
name = "melon"
version = "0.1.0"
authors = ["Damian Andrei <andreidaamian@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.28"
byteorder = "1.3.4"
flate2 = "1.0.13"
num_enum = "0.4.3"
polling = "2.2.0"
cfb8 = "0.7.1"
cipher = "0.4.3"
rand = "0.8.5"
rsa = "0.6.1"
sha1 = "0.10.1"
ureq = "2.4.0"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
num-bigint = "0.4.3"
aes = "0.7.2"