[package]
name = "melon"
version = "0.1.0"
authors = ["Damian Andrei <andreidaamian@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.65"
bumpalo = { version = "3.11.0", features = ["collections"] }
byteorder = "1.4.3"
flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }
num_enum = "0.5.7"
polling = "2.3.0"
rand = "0.8.5"
ureq = "2.5.0"
num-bigint = "0.4.3"

serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"

aes = "0.7.2"
cfb8 = "0.7.1"
cipher = "0.4.3"
rsa = "0.6.1"
sha1 = "0.10.5"
