[package]
name = "proxy_lib"
version = "0.1.0"
authors = ["Damian Andrei <andreidaamian@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
async-trait = "0.1.30"
bytes = "0.5.4"
byteorder = "1.3.4"
flate2 = "1.0.13"
futures = "^0.3.0"
num_enum = "0.4.3"
tokio = { version = "0.2.17", features = ["fs", "tcp", "macros", "sync", "rt-core", "io-std", "io-util", "dns", "blocking"] }
